# wrc-park-vision

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
configs/: runtime.example.yaml  runtime.yolo-world.example.yaml
datasets_stage/portable_gas_stove/butane/: data.yaml
datasets_stage/portable_gas_stove/mix/: data.yaml
datasets_stage/skateboard/cva2/: data.yaml
datasets_stage/skateboard/practicas/: data.yaml
datasets_stage/skateboard/unity/: data.yaml
scripts/dataset_tools/: README.md  extract_class_dataset.py  filter_yolo_single_class.py  merge_class_datasets.py  merge_multiclass_dataset.py  preview_yolo_boxes.py  split_train_val.py  split_yolo_train_val.py  yolo_common.py
src/wrc_park_vision/: __init__.py
src/wrc_park_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wrc_park_vision/runtime/: __init__.py  cli.py  config.py  crops.py  detection_summary.py  fusion.py  output.py  pipeline.py  preview.py  review.py  schemas.py
src/wrc_park_vision/runtime/backends/: __init__.py  base.py  tensorrt.py  (+2 more)
tests/runtime/: __init__.py  helpers.py  test_behavior_pipeline.py  test_config.py  test_crops.py  test_detection_summary.py  test_fusion.py  test_geometry.py  test_output.py  test_pipeline.py  test_preview.py  test_review.py  test_serialization.py  test_ultralytics_backend.py  test_vlm_review.py  test_yolo_world_backend.py
wiki/: architecture.md  class-list.md  codex-log.md  competition-rules.md  content-map.md  current-status.md  data-plan.md  decisions.md  hardware-notes.md  open-questions.md
(+3605 files in other folders)
